src/objects/Auto_Subscriber_Setting__mdt.object
<CustomObject>
    <description>Contains objects to enable and disable various auto subscribe filters.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <description>Select the object that this rule should correspond with.</description>
        <inlineHelpText>Select the object that this rule should correspond with.</inlineHelpText>
        <label>Related Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Auto_Subscriber_Settings</relationshipLabel>
        <relationshipName>Auto_Subscriber_Settings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Subscriptions_To_Add__c</fullName>
        <description>A list of all the subscriptions that a subscriber should be added for, for this setting.</description>
        <inlineHelpText>Please add each Subscription you would like the user to be added to separated by a comma (No Spaces)</inlineHelpText>
        <label>Subscriptions To Add</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Auto Subscriber Setting</label>
    <pluralLabel>Auto Subscriber Settings</pluralLabel>
</CustomObject>